- Fix mode toggle bug (offset-bottom) - Setup bottle rotate animation - Setup random rotate deg alrgorithm - Fix bottle rotation overflow bug

--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -2,6 +2,10 @@ ion-menu-button {
   color: var(--ion-color-primary);
 }
 
+ion-content {
+  --overflow: hidden;
+}
+
 #container {
   text-align: center;
   position: absolute;
@@ -38,6 +42,34 @@ ion-content ion-toolbar {
   margin: auto;
 }
 
+#bottle {
+  width: 50%;
+  height: auto;
+}
+
+.middle {
+  vertical-align: middle;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  position: absolute;
+}
+
+.textAlignMiddle {
+  text-align: center;
+}
+
+.bottom {
+  top: auto;
+  bottom: 10%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 30%;
+}
+
 .controls {
   position: absolute;
     bottom: 10px;
@@ -47,4 +79,8 @@ ion-content ion-toolbar {
     left: 0;
     right: 0;
     transform: scale(1.3);
+}
+
+#bottleMode, #diceMode {
+  --offset-bottom: 0px !important;
 }
